--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <div id="trainTimes">
 
+    <h2>Train Times</h2>
+
     <table>
 
         <tr>
@@ -37,7 +39,26 @@
 
 
 
-<div id="addTrain">addTrain</div>
+<div id="addTrain">
+
+    <h2>Add Train</h2>
+
+    <form action="">
+
+        Train Name: <br>
+        <input type="text" name="trainName"> <br>
+        Destination <br>
+        <input type="text" name="destination"> <br>
+        First Train Time (HH:mm - military time) <br>
+        <input type="text" name="firstTrainTime"> <br>
+        Frequency (mins) <br>
+        <input type="text" name="frequency"> <br>
+        <br>
+        <input type="submit" value="Submit">
+
+    </form>
+
+</div>
 
 </body>
 </html>
