Added additional trains.. Choo Choo!

--- a/index.html
+++ b/index.html
@@ -30,11 +30,35 @@
         </tr>
 
         <tr>
-            <td>Train 1</td>
+            <td>Thomas The Tank Engine</td>
             <td>Moscow</td>
-            <td>60</td>
-            <td>20</td>
-            <td>15</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Mighty Mountains Line</td>
+            <td>Colorado</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Iron Fjord Tracks</td>
+            <td>Alaska</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Ethereal Wild Route</td>
+            <td>Wyoming</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
 
     </table>
