Successfully pushing data to firebase, just need to add in moment js and polish

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     
+        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 <h1>All Aboard!</h1>
 
 <div id="trainTimes">
@@ -29,37 +31,7 @@
             <th>Minutes Away</th>
         </tr>
 
-        <tr>
-            <td>Thomas The Tank Engine</td>
-            <td>Moscow</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>Mighty Mountains Line</td>
-            <td>Colorado</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>Iron Fjord Tracks</td>
-            <td>Alaska</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>Ethereal Wild Route</td>
-            <td>Wyoming</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
+        
 
     </table>
 
